deps/v8/test/message/fail/spread-construct.out
*%(basename)s:6: TypeError: x is not iterable (cannot read property null)
new p(1, ...x);
            ^
TypeError: x is not iterable (cannot read property null)
    at *%(basename)s:6:1
